--- a/docker/DockerfileKalliope
+++ b/docker/DockerfileKalliope
@@ -6,6 +6,5 @@ COPY provisioners/kalliope.sh ./
 RUN bash kalliope.sh
 
 COPY keys/kalliope/*key* /etc/ssh/
-RUN chown -R root:root /etc/ssh && \
-  chmod 600 /etc/ssh/*_key && \
-  chmod 644 /etc/ssh/*.pub
+COPY provisioners/ssh_host_keys.sh .
+RUN bash ssh_host_keys.sh
